--- a/01_Draw_tessellation_diagrams.ipynb
+++ b/01_Draw_tessellation_diagrams.ipynb
@@ -9,7 +9,7 @@
     "Computational notebook 01 for **Morphological tessellation as a way of partitioning space: Improving consistency in urban morphology at the plot scale**.\n",
     "\n",
     "\n",
-    "Fleischmann, M., Feliciotti, A., Romice, O. and Porta, S. (2020) _‘Morphological tessellation as a way of partitioning space: Improving consistency in urban morphology at the plot scale’_, Computers, Environment and Urban Systems, 80, p. 101441. doi: 10.1016/j.compenvurbsys.2019.101441.\n",
+    "Fleischmann, M., Feliciotti, A., Romice, O. and Porta, S. (2020) _‘Morphological tessellation as a way of partitioning space: Improving consistency in urban morphology at the plot scale’_, Computers, Environment and Urban Systems, 80, p. 101441. doi: [10.1016/j.compenvurbsys.2019.101441](http://doi.org/10.1016/j.compenvurbsys.2019.101441).\n",
     "\n",
     "Contact: martin@martinfleischmann.net\n",
     "\n",
@@ -18,8 +18,9 @@
     "Note: notebook has been cleaned and released retroactively. It is likely that different versions of packages were initially used, but we made sure that the results remained unaltered.\n",
     "\n",
     "---\n",
+    "**Description**\n",
     "\n",
-    "This notebook generates diagrams illustrating the principles of morphological tessellation used to prepare figures 2, 3 and 4."
+    "This notebook generates diagrams illustrating the principles of morphological tessellation used to prepare figures 2, 3 and 4. Figures were later post-processed in Illustrator."
    ]
   },
   {
