Add data availability note

--- a/04_Spatial_autocorrelation.ipynb
+++ b/04_Spatial_autocorrelation.ipynb
@@ -26,6 +26,8 @@
     "---\n",
     "**Data**\n",
     "\n",
+    "This repository does not contain complete data due to the size limitations. **Complete geospatial data are openly available from the University of Strathclyde KnowledgeBase at DOI.** together with an archived version of this repository.\n",
+    "\n",
     "The source of the data used wihtin the research is the Amtliche Vermessung dataset accessible from the Zurich municipal GIS open data portal (https://maps.zh.ch). From it can be extracted the cadastral layer (`Liegenschaften_Liegenschaft_Area`) and the layer of buildings (all features named `Gebäude`). All data are licensed under CC-BY 4.0.\n",
     "\n",
     "Source data: Vektor-Übersichtsplan des Kantons Zürich, 13.03.2018, Amt für Raumentwicklung Geoinformation / GIS-Produkte, Kanton Zürich, https://opendata.swiss/de/dataset/vektor-ubersichtsplan1\n",
