--- a/01_Draw_tessellation_diagrams.ipynb
+++ b/01_Draw_tessellation_diagrams.ipynb
@@ -11,6 +11,9 @@
     "\n",
     "Fleischmann, M., Feliciotti, A., Romice, O. and Porta, S. (2020) _‘Morphological tessellation as a way of partitioning space: Improving consistency in urban morphology at the plot scale’_, Computers, Environment and Urban Systems, 80, p. 101441. doi: [10.1016/j.compenvurbsys.2019.101441](http://doi.org/10.1016/j.compenvurbsys.2019.101441).\n",
     "\n",
+    "Archived version of this repository is stored at the University of Strathclyde KnowledgeBase at DOI [10.15129/c766db26-3fa8-45c6-8218-098d529571fc](https://doi.org/10.15129/c766db26-3fa8-45c6-8218-098d529571fc).\n",
+    "\n",
+    "\n",
     "Contact: martin@martinfleischmann.net\n",
     "\n",
     "Date: 27/03/2020\n",
