--- a/06_Contiguity_diagram.ipynb
+++ b/06_Contiguity_diagram.ipynb
@@ -4,12 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Analysis of similarity of measured data\n",
+    "# Contiguity diagram\n",
     "\n",
     "Computational notebook 06 for **Morphological tessellation as a way of partitioning space: Improving consistency in urban morphology at the plot scale**.\n",
     "\n",
     "\n",
     "Fleischmann, M., Feliciotti, A., Romice, O. and Porta, S. (2020) _‘Morphological tessellation as a way of partitioning space: Improving consistency in urban morphology at the plot scale’_, Computers, Environment and Urban Systems, 80, p. 101441. doi: [10.1016/j.compenvurbsys.2019.101441](http://doi.org/10.1016/j.compenvurbsys.2019.101441).\n",
+    "\n",
+    "Archived version of this repository is stored at the University of Strathclyde KnowledgeBase at DOI [10.15129/c766db26-3fa8-45c6-8218-098d529571fc](https://doi.org/10.15129/c766db26-3fa8-45c6-8218-098d529571fc).\n",
     "\n",
     "Contact: martin@martinfleischmann.net\n",
     "\n",
@@ -24,7 +26,6 @@
     "\n",
     "---\n",
     "**Data**\n",
-    "\n",
     "\n",
     "The source of the data used wihtin the research is the Amtliche Vermessung dataset accessible from the Zurich municipal GIS open data portal (https://maps.zh.ch). From it can be extracted the cadastral layer (`Liegenschaften_Liegenschaft_Area`) and the layer of buildings (all features named `Gebäude`). All data are licensed under CC-BY 4.0.\n",
     "\n",
